test/conformance/chainsaw/verify-images/clusterpolicy/standard/notary-image-verification/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notary-verify-images
---

apiVersion: v1
kind: ConfigMap
metadata:
  name: keys
  namespace: notary-verify-images
data:
  certificate: |-
    -----BEGIN CERTIFICATE-----
    MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
    uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
    -----END CERTIFICATE-----
---

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-notary
spec:
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: verify-signature-notary
      context:
      - name: keys
        configMap:
          name: keys
          namespace: notary-verify-images
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - type: Notary
        imageReferences:
        - "ghcr.io/kyverno/test-verify-image*"
        failureAction: Enforce
        attestors:
        - count: 1
          entries:
          - certificates:
              cert: "{{ keys.data.certificate }}"
