test/conformance/chainsaw/verify-images/clusterpolicy/standard/notary-image-verification/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: notary-verify-images
