test/conformance/chainsaw/verify-images/clusterpolicy/standard/notary-image-verification/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: notary-image-verification
spec:
  concurrent: false
  timeouts:
    delete: 2m
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-image-notary
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
